--- a/TournamentApp/Views/Account/MyProfile.cshtml
+++ b/TournamentApp/Views/Account/MyProfile.cshtml
@@ -5,19 +5,21 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Profile</h2>
+<h2>@Model.UserName</h2>
 
 <div>
-    <h4>ApplicationUser</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            Team
-        </dt>
+    <dl class="dl-vertical">
+        @if (Model.InTeam != null)
+        {
+            <dt>
+                Tým
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Team.Name)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Team.Name)
+            </dd>
+        }
 
         <dt>
             Pohlaví
@@ -36,121 +38,51 @@
                 <dd>Nezadáno</dd>
             }
 
-<dt>
-            @Html.DisplayNameFor(model => model.Weight)
-        </dt>
+        @if (Model.Weight != null)
+        {
+            <dt>
+                @Html.DisplayNameFor(model => model.Weight)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Weight)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Weight)
+            </dd>
+        }
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Country)
-        </dt>
+        @if (Model.Country != null)
+        {
+            <dt>
+                @Html.DisplayNameFor(model => model.Country)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Country)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Country)
+            </dd>
+        }
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TeamConfirmed)
-        </dt>
+        @if (Model.Email != null)
+        {
+            <dt>
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.TeamConfirmed)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+        }
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
+        @if (Model.PhoneNumber != null)
+        {
+            <dt>
+                @Html.DisplayNameFor(model => model.Weight)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EmailConfirmed)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EmailConfirmed)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PasswordHash)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PasswordHash)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SecurityStamp)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SecurityStamp)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PhoneNumberConfirmed)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TwoFactorEnabled)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TwoFactorEnabled)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LockoutEndDateUtc)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LockoutEndDateUtc)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LockoutEnabled)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LockoutEnabled)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AccessFailedCount)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AccessFailedCount)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UserName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserName)
-        </dd>
-
+            <dd>
+                @Html.DisplayFor(model => model.Weight)
+            </dd>
+        }
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
 </p>
