--- a/TournamentApp/Views/Home/Info.cshtml
+++ b/TournamentApp/Views/Home/Info.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>Informace</h2>
+<h3>Nadpis</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Nejake ty informace o stránce</p>
