--- a/TournamentApp/Views/Shared/_Layout.cshtml
+++ b/TournamentApp/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/modernizr")
     <script src="~/Scripts/everywhere.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script>
         $(document).ready(function () {
             $.validator.addMethod('date', function (value, element) {
