--- a/TournamentApp/Views/Team/All.cshtml
+++ b/TournamentApp/Views/Team/All.cshtml
@@ -16,3 +16,29 @@
     }
 </ul>
 
+
+@*<div ng-app="myApp" ng-controller="namesCtrl">
+    <p><input type="text" ng-model="test"></p>
+    <ul>
+        <li ng-repeat="x in names | filter:test">
+            <a href="/Team/Details/1"> {{ x }} </a>
+        </li>
+    </ul>
+</div>
+
+<script>
+angular.module('myApp', []).controller('namesCtrl', function($scope) {
+    $scope.names = [
+        'Jani',
+        'Carl',
+        'Margareth',
+        'Hege',
+        'Joe',
+        'Gustav',
+        'Birgit',
+        'Mary',
+        'Kai'
+    ];
+});
+</script>*@
+
