--- a/TournamentApp/Views/Tournament/Details.cshtml
+++ b/TournamentApp/Views/Tournament/Details.cshtml
@@ -110,7 +110,7 @@
                     <h3>Bílé pásky - muži</h3>
                 }
 
-                <h4>@group.WeightKg Kg <span class="badge">@group.RegistredUsers.Count</span></h4>
+                <h4>@group.WeightKg Kg <span class="badge">@group.RegistredUsers.Count</span></h4> @Html.ActionLink("Show draw", (string)@group.Id, "Group/Draw")
                 <table class="table table-striped">
                     @foreach (var user in @group.RegistredUsers)
                     {
